tests/backpack/should_fail/bkpfail12.bkp
-- Everything is easy
unit p where
    signature Q where
        f :: Int
    module P where
unit q where
    module Q where
        f = True
unit r where
    dependency p[Q=q:Q]
    dependency q
    signature H where
    module R where
        import P
